# workspace

./: .env.example  .gitignore  README.md  drop_all_tables.sql  pyproject.toml  requirements.txt
adapters/: README.md  __init__.py
adapters/playwright_python/: __init__.py  adapter.py  facade.py
adapters/selenium_python/: __init__.py  adapter.py  facade.py
artifacts/: last-run-failure-assessment.md
artifacts/chroma/: chroma.sqlite3
artifacts/metadata/: events.jsonl
artifacts/reports/: cucumber-llm-only-playwright.json  cucumber-playwright-llm-only.json  cucumber.full.json  cucumber.json  cucumber.llm_only.pass2.json  cucumber.llm_only.pass3_after_dbwipe.json  healing-calls.jsonl  integration-junit.xml  integration-report.html  steps.jsonl
docs/: 01_Prompts_Master Design.md  ENV_DB_LLM_E2E_INTEGRATION_RUNBOOK.md  Running env config.txt  failure_root_cause_2026_03_22.md  issue_analysis_llm_only_variability_2026_03_23.md  page_indexing_xpath_healer_changes.md  postgres_schema_manual_setup.md  structure_aware_xpath_healing_architecture.md  xpath_healer_high_level_architecture.docx  xpath_healer_master_architecture.md  xpath_healer_solution_design.md
docs/solution_v2/: 02_DB_Layer_Design_v2.md  (+11 more)
prompts/: 01_Master_Design_for_xpath_healer.md  02_Prompts Structure.md  03_Layer_Execution_Order.md  Prompts Structure.md
service/: __init__.py  main.py  session_registry.py
tests/: conftest.py
tools/: rag_db_stats.py
xpath-healer/: README.md  pyproject.toml
xpath_healer/: __init__.py
xpath_healer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+243 files in other folders)
